# chatgpt-from-scratch

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: ci-backend.yaml
backend/: justfile  pyproject.toml  settings.py
backend/app/: main.py  router.py
backend/encoders/: byte_pair.py
backend/model/: gtp2.py  huggingface.py  simple_model.py
backend/utils/: launch_sagemaker.py
flows/: train.py  training.py
frontend/: eslint.config.js  justfile  package-lock.json  package.json  vitest.config.js
frontend/src/: App.vue
frontend/src/components/: ChatSidebar.vue  ChatWindow.vue
frontend/src/components/__tests__/: dummy.test.js
model/: dummy_model.py
utils/: launch_sagemaker.py
