[tool.poetry]
name = "chatgpt-from-scratch"
version = "0.1.0"
description = "Creating ChatGPT from scratch"
authors = ["stephenCarmody <stephen.m.carmody@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.2"
datasets = "^3.2.0"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
